syntax = "proto3";

package conversation;

option go_package = "realtime-backend/pb;pb";

// 실시간 번역 서비스
service ConversationService {
  // 양방향 스트리밍 RPC
  // Go(Audio) → Python(AI) → Go(Audio/Text)
  rpc StreamChat(stream ChatRequest) returns (stream ChatResponse);

  // 참가자 설정 업데이트 (타겟 언어 변경 등)
  rpc UpdateParticipantSettings(ParticipantSettingsRequest) returns (ParticipantSettingsResponse);
}

message ChatRequest {
  string session_id = 1;         // 세션 식별자
  string room_id = 2;            // 회의실 ID
  string participant_id = 3;     // 발화자 ID

  oneof payload {
    bytes audio_chunk = 4;       // 오디오 청크 (Int16 PCM)
    SessionInit session_init = 5; // 세션 초기화 정보
    SessionEnd session_end = 6;   // 세션 종료 신호
  }
}

// 세션 초기화 정보
message SessionInit {
  uint32 sample_rate = 1;        // 샘플레이트 (예: 16000)
  uint32 channels = 2;           // 채널 수 (예: 1)
  uint32 bits_per_sample = 3;    // 비트 깊이 (예: 16)
  string source_language = 4;    // 발화자 언어 코드 (예: "ko", "en", "zh", "ja")

  // 회의실 참가자 목록 (각자의 타겟 언어 포함)
  repeated ParticipantInfo participants = 5;

  // 발화자 정보
  SpeakerInfo speaker = 6;
}

// 참가자 정보
message ParticipantInfo {
  string participant_id = 1;      // 참가자 고유 ID
  string nickname = 2;            // 닉네임
  string profile_img = 3;         // 프로필 이미지 URL
  string target_language = 4;     // 듣고 싶은 언어 코드
  bool translation_enabled = 5;   // 번역 기능 활성화 여부
}

// 발화자 정보
message SpeakerInfo {
  string participant_id = 1;
  string nickname = 2;
  string profile_img = 3;
  string source_language = 4;
}

// 세션 종료 신호
message SessionEnd {
  string reason = 1;
}

// 참가자 설정 업데이트 요청
message ParticipantSettingsRequest {
  string room_id = 1;
  string participant_id = 2;
  string target_language = 3;
  bool translation_enabled = 4;
}

// 참가자 설정 업데이트 응답
message ParticipantSettingsResponse {
  bool success = 1;
  string message = 2;
}

message ChatResponse {
  string session_id = 1;
  string room_id = 2;

  oneof payload {
    TranscriptResult transcript = 3;  // STT 결과 (원본 + 번역)
    AudioResult audio = 4;            // TTS 오디오 (타겟별)
    ErrorResponse error = 5;          // 에러
    SessionStatus status = 6;         // 세션 상태
  }
}

message TranscriptResult {
  string id = 1;                      // 고유 ID (중복 방지)
  SpeakerInfo speaker = 2;            // 발화자 정보
  string original_text = 3;           // 원본 텍스트
  string original_language = 4;       // 원본 언어

  // 타겟 언어별 번역 결과
  repeated TranslationEntry translations = 5;

  bool is_partial = 6;                // 실시간 중간 결과 여부
  bool is_final = 7;                  // 문장 완료 여부
  uint64 timestamp_ms = 8;            // 타임스탬프
  float confidence = 9;               // 신뢰도
}

// 번역 항목 (타겟 언어별)
message TranslationEntry {
  string target_language = 1;         // 타겟 언어 코드
  string translated_text = 2;         // 번역된 텍스트

  // 이 번역을 받아야 할 참가자 ID 목록
  repeated string target_participant_ids = 3;
}

message AudioResult {
  string transcript_id = 1;           // 연관된 transcript ID
  string target_language = 2;         // 타겟 언어

  // 이 오디오를 받아야 할 참가자 ID 목록
  repeated string target_participant_ids = 3;

  bytes audio_data = 4;               // 오디오 바이트 (MP3)
  string format = 5;                  // 포맷 (예: "mp3")
  uint32 sample_rate = 6;             // 샘플레이트
  uint32 duration_ms = 7;             // 오디오 길이 (ms)

  // 발화자 정보 (Self-mute 처리용)
  string speaker_participant_id = 8;
}

message SessionStatus {
  enum Status {
    UNKNOWN = 0;
    READY = 1;
    PROCESSING = 2;
    BUFFERING = 3;     // 문장 완성 대기 중 (어순 다른 언어)
    COMPLETED = 4;
    ERROR = 5;
  }

  Status status = 1;
  string message = 2;

  // 현재 버퍼링 전략 정보
  BufferingStrategy buffering_strategy = 3;
}

// 버퍼링 전략 정보
message BufferingStrategy {
  enum StrategyType {
    CHUNK_BASED = 0;     // 1.5초 단위 청크 (어순 유사)
    SENTENCE_BASED = 1;  // 문장 완성 대기 (어순 상이)
  }

  string source_language = 1;
  string primary_target_language = 2;
  StrategyType strategy = 3;
  uint32 buffer_size_ms = 4;  // 현재 버퍼 크기
}

message ErrorResponse {
  string code = 1;
  string message = 2;
  string details = 3;
}
