package ai

import (
	"context"
	"io"
	"log"
	"sync"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/keepalive"

	"realtime-backend/pb"
)

const (
	// ì±„ë„ ë²„í¼ í¬ê¸°
	SendChannelSize = 100
	RecvChannelSize = 100

	// gRPC ì—°ê²° ì„¤ì •
	MaxRetries       = 3
	RetryBackoff     = time.Second
	KeepAliveTime    = 10 * time.Second
	KeepAliveTimeout = 5 * time.Second
	MaxRecvMsgSize   = 4 * 1024 * 1024 // 4MB
	MaxSendMsgSize   = 4 * 1024 * 1024 // 4MB
)

// GrpcClient Python AI ì„œë²„ì™€ í†µì‹ í•˜ëŠ” gRPC í´ë¼ì´ì–¸íŠ¸
type GrpcClient struct {
	conn   *grpc.ClientConn
	client pb.ConversationServiceClient
	addr   string
}

// TranscriptMessage STT/ë²ˆì—­ ê²°ê³¼ ë©”ì‹œì§€
type TranscriptMessage struct {
	ID               string
	Speaker          *pb.SpeakerInfo
	OriginalText     string
	OriginalLanguage string
	Translations     []*pb.TranslationEntry
	IsPartial        bool
	IsFinal          bool
	TimestampMs      uint64
	Confidence       float32
}

// AudioMessage TTS ì˜¤ë””ì˜¤ ë©”ì‹œì§€
type AudioMessage struct {
	TranscriptID         string
	TargetLanguage       string
	TargetParticipantIDs []string
	AudioData            []byte
	Format               string
	SampleRate           uint32
	DurationMs           uint32
	SpeakerParticipantID string
}

// AudioChunkWithSpeaker ìŠ¤í”¼ì»¤ ì •ë³´ê°€ í¬í•¨ëœ ì˜¤ë””ì˜¤ ì²­í¬
type AudioChunkWithSpeaker struct {
	AudioData     []byte
	SpeakerID     string
	SpeakerName   string
	SourceLang    string
	ProfileImg    string
}

// ChatStream ì–‘ë°©í–¥ ìŠ¤íŠ¸ë¦¬ë°ì„ ìœ„í•œ ì±„ë„ ë¬¶ìŒ
type ChatStream struct {
	SendChan       chan<- *AudioChunkWithSpeaker // ì˜¤ë””ì˜¤ ì „ì†¡ìš© (ìŠ¤í”¼ì»¤ ì •ë³´ í¬í•¨)
	RecvChan       <-chan []byte                 // ì˜¤ë””ì˜¤ ìˆ˜ì‹ ìš© (ë ˆê±°ì‹œ í˜¸í™˜)
	TranscriptChan <-chan *TranscriptMessage     // STT/ë²ˆì—­ ê²°ê³¼
	AudioChan      <-chan *AudioMessage          // TTS ì˜¤ë””ì˜¤ (íƒ€ê²Ÿë³„)
	ErrChan        <-chan error                  // ì—ëŸ¬ ìˆ˜ì‹ ìš©
	Cancel         context.CancelFunc
}

// ParticipantConfig ì°¸ê°€ì ì„¤ì •
type ParticipantConfig struct {
	ParticipantID      string
	Nickname           string
	ProfileImg         string
	TargetLanguage     string
	TranslationEnabled bool
}

// SpeakerConfig ë°œí™”ì ì„¤ì •
type SpeakerConfig struct {
	ParticipantID  string
	Nickname       string
	ProfileImg     string
	SourceLanguage string
}

// SessionConfig ì„¸ì…˜ ì„¤ì • ì •ë³´
type SessionConfig struct {
	SampleRate     uint32
	Channels       uint32
	BitsPerSample  uint32
	SourceLanguage string              // ë°œí™”ì ì–¸ì–´ (ko, en, ja, zh)
	Participants   []ParticipantConfig // íšŒì˜ì‹¤ ì°¸ê°€ì ëª©ë¡
	Speaker        *SpeakerConfig      // ë°œí™”ì ì •ë³´
}

// NewGrpcClient ìƒˆ gRPC í´ë¼ì´ì–¸íŠ¸ ìƒì„± ë° ì—°ê²°
func NewGrpcClient(addr string) (*GrpcClient, error) {
	// gRPC ì—°ê²° ì˜µì…˜
	opts := []grpc.DialOption{
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithDefaultCallOptions(
			grpc.MaxCallRecvMsgSize(MaxRecvMsgSize),
			grpc.MaxCallSendMsgSize(MaxSendMsgSize),
		),
		grpc.WithKeepaliveParams(keepalive.ClientParameters{
			Time:                KeepAliveTime,
			Timeout:             KeepAliveTimeout,
			PermitWithoutStream: true,
		}),
	}

	// ì—°ê²° ì‹œë„ (ì¬ì‹œë„ ë¡œì§ í¬í•¨)
	var conn *grpc.ClientConn
	var err error

	for i := 0; i < MaxRetries; i++ {
		conn, err = grpc.NewClient(addr, opts...)
		if err == nil {
			break
		}
		log.Printf("âš ï¸ gRPC connection attempt %d failed: %v", i+1, err)
		time.Sleep(RetryBackoff * time.Duration(i+1))
	}

	if err != nil {
		return nil, err
	}

	return &GrpcClient{
		conn:   conn,
		client: pb.NewConversationServiceClient(conn),
		addr:   addr,
	}, nil
}

// Close ì—°ê²° ì¢…ë£Œ
func (c *GrpcClient) Close() error {
	if c.conn != nil {
		return c.conn.Close()
	}
	return nil
}

// StartChatStream ì–‘ë°©í–¥ ìŠ¤íŠ¸ë¦¬ë° ì‹œì‘
func (c *GrpcClient) StartChatStream(ctx context.Context, sessionID, roomID string, config *SessionConfig) (*ChatStream, error) {
	// ì·¨ì†Œ ê°€ëŠ¥í•œ ì»¨í…ìŠ¤íŠ¸ ìƒì„±
	streamCtx, cancel := context.WithCancel(ctx)

	// gRPC ìŠ¤íŠ¸ë¦¼ ìƒì„±
	stream, err := c.client.StreamChat(streamCtx)
	if err != nil {
		cancel()
		return nil, err
	}

	// SessionInit ë©”ì‹œì§€ ì „ì†¡ (ìŠ¤íŠ¸ë¦¼ ì‹œì‘ ì‹œ)
	if config != nil {
		// ì°¸ê°€ì ëª©ë¡ ë³€í™˜
		participants := make([]*pb.ParticipantInfo, len(config.Participants))
		for i, p := range config.Participants {
			participants[i] = &pb.ParticipantInfo{
				ParticipantId:      p.ParticipantID,
				Nickname:           p.Nickname,
				ProfileImg:         p.ProfileImg,
				TargetLanguage:     p.TargetLanguage,
				TranslationEnabled: p.TranslationEnabled,
			}
		}

		// ë°œí™”ì ì •ë³´ ë³€í™˜
		var speaker *pb.SpeakerInfo
		if config.Speaker != nil {
			speaker = &pb.SpeakerInfo{
				ParticipantId:  config.Speaker.ParticipantID,
				Nickname:       config.Speaker.Nickname,
				ProfileImg:     config.Speaker.ProfileImg,
				SourceLanguage: config.Speaker.SourceLanguage,
			}
		}

		initReq := &pb.ChatRequest{
			SessionId:     sessionID,
			RoomId:        roomID,
			ParticipantId: config.Speaker.ParticipantID,
			Payload: &pb.ChatRequest_SessionInit{
				SessionInit: &pb.SessionInit{
					SampleRate:     config.SampleRate,
					Channels:       config.Channels,
					BitsPerSample:  config.BitsPerSample,
					SourceLanguage: config.SourceLanguage,
					Participants:   participants,
					Speaker:        speaker,
				},
			},
		}
		if err := stream.Send(initReq); err != nil {
			cancel()
			return nil, err
		}
		log.Printf("ğŸ“¤ [%s] SessionInit sent: srcLang=%s, participants=%d, rate=%d",
			sessionID, config.SourceLanguage, len(participants), config.SampleRate)
	}

	// ì±„ë„ ìƒì„±
	sendChan := make(chan *AudioChunkWithSpeaker, SendChannelSize)
	recvChan := make(chan []byte, RecvChannelSize)           // ë ˆê±°ì‹œ í˜¸í™˜
	transcriptChan := make(chan *TranscriptMessage, 50)       // STT/ë²ˆì—­ ê²°ê³¼
	audioChan := make(chan *AudioMessage, RecvChannelSize)    // TTS ì˜¤ë””ì˜¤
	errChan := make(chan error, 1)

	var wg sync.WaitGroup
	wg.Add(2)

	// Send Routine: ì±„ë„ â†’ gRPC
	go func() {
		defer wg.Done()
		defer stream.CloseSend()

		// ê¸°ë³¸ participantID (Room ëª¨ë“œê°€ ì•„ë‹Œ ê²½ìš° ì‚¬ìš©)
		defaultParticipantID := ""
		defaultSourceLang := ""
		if config != nil && config.Speaker != nil {
			defaultParticipantID = config.Speaker.ParticipantID
			defaultSourceLang = config.Speaker.SourceLanguage
		}

		for {
			select {
			case <-streamCtx.Done():
				log.Printf("â„¹ï¸ [%s] Send routine: context cancelled", sessionID)
				return

			case chunk, ok := <-sendChan:
				if !ok {
					log.Printf("â„¹ï¸ [%s] Send routine: channel closed", sessionID)
					return
				}

				// ìŠ¤í”¼ì»¤ ì •ë³´ ê²°ì • (ì²­í¬ì— ìˆìœ¼ë©´ ì‚¬ìš©, ì—†ìœ¼ë©´ ê¸°ë³¸ê°’)
				speakerID := defaultParticipantID
				sourceLang := defaultSourceLang
				if chunk.SpeakerID != "" {
					speakerID = chunk.SpeakerID
				}
				if chunk.SourceLang != "" {
					sourceLang = chunk.SourceLang
				}

				// ìŠ¤í”¼ì»¤ ì •ë³´ê°€ ë³€ê²½ëœ ê²½ìš° SessionInit ì¬ì „ì†¡
				// Python ì„œë²„ê°€ ìŠ¤í”¼ì»¤ë³„ë¡œ ì²˜ë¦¬í•  ìˆ˜ ìˆë„ë¡ í•¨
				if chunk.SpeakerID != "" && chunk.SourceLang != "" {
					speakerInit := &pb.ChatRequest{
						SessionId:     sessionID,
						RoomId:        roomID,
						ParticipantId: speakerID,
						Payload: &pb.ChatRequest_SessionInit{
							SessionInit: &pb.SessionInit{
								SampleRate:     16000,
								Channels:       1,
								BitsPerSample:  16,
								SourceLanguage: sourceLang,
								Speaker: &pb.SpeakerInfo{
									ParticipantId:  speakerID,
									Nickname:       chunk.SpeakerName,
									ProfileImg:     chunk.ProfileImg,
									SourceLanguage: sourceLang,
								},
							},
						},
					}
					if err := stream.Send(speakerInit); err != nil {
						if err != io.EOF {
							log.Printf("âŒ [%s] gRPC speaker init error: %v", sessionID, err)
						}
					}
				}

				// ChatRequestë¡œ ì˜¤ë””ì˜¤ ì „ì†¡
				req := &pb.ChatRequest{
					SessionId:     sessionID,
					RoomId:        roomID,
					ParticipantId: speakerID,
					Payload: &pb.ChatRequest_AudioChunk{
						AudioChunk: chunk.AudioData,
					},
				}

				if err := stream.Send(req); err != nil {
					if err != io.EOF {
						log.Printf("âŒ [%s] gRPC send error: %v", sessionID, err)
						select {
						case errChan <- err:
						default:
						}
					}
					return
				}
			}
		}
	}()

	// Recv Routine: gRPC â†’ ì±„ë„
	go func() {
		defer wg.Done()
		defer close(recvChan)
		defer close(transcriptChan)
		defer close(audioChan)

		for {
			resp, err := stream.Recv()
			if err != nil {
				if err == io.EOF {
					log.Printf("â„¹ï¸ [%s] gRPC stream ended (EOF)", sessionID)
				} else {
					select {
					case <-streamCtx.Done():
						// ì»¨í…ìŠ¤íŠ¸ ì·¨ì†Œë¡œ ì¸í•œ ì¢…ë£Œ
					default:
						log.Printf("âŒ [%s] gRPC recv error: %v", sessionID, err)
						select {
						case errChan <- err:
						default:
						}
					}
				}
				return
			}

			// ì‘ë‹µ íƒ€ì…ë³„ ì²˜ë¦¬
			switch payload := resp.Payload.(type) {
			case *pb.ChatResponse_Transcript:
				// STT + ë²ˆì—­ ê²°ê³¼
				tr := payload.Transcript
				msg := &TranscriptMessage{
					ID:               tr.Id,
					Speaker:          tr.Speaker,
					OriginalText:     tr.OriginalText,
					OriginalLanguage: tr.OriginalLanguage,
					Translations:     tr.Translations,
					IsPartial:        tr.IsPartial,
					IsFinal:          tr.IsFinal,
					TimestampMs:      tr.TimestampMs,
					Confidence:       tr.Confidence,
				}

				select {
				case transcriptChan <- msg:
				default:
					log.Printf("âš ï¸ [%s] Transcript channel full, dropping", sessionID)
				}

				// Latency tracking
				now := time.Now().UnixMilli()
				latencyMs := int64(0)
				if tr.TimestampMs > 0 {
					latencyMs = now - int64(tr.TimestampMs)
				}

				if tr.IsPartial {
					log.Printf("ğŸ—£ï¸ [%s] STT Partial: %s (latency: %dms)", sessionID, tr.OriginalText, latencyMs)
				} else if tr.IsFinal {
					transInfo := ""
					for _, t := range tr.Translations {
						transInfo += t.TargetLanguage + ":" + t.TranslatedText[:min(20, len(t.TranslatedText))] + "... "
					}
					log.Printf("âœ… [%s] STT Final: '%s' â†’ [%s] (conf: %.2f, latency: %dms)",
						sessionID, tr.OriginalText, transInfo, tr.Confidence, latencyMs)
				}

			case *pb.ChatResponse_Audio:
				// TTS ì˜¤ë””ì˜¤ ì‘ë‹µ
				audio := payload.Audio
				msg := &AudioMessage{
					TranscriptID:         audio.TranscriptId,
					TargetLanguage:       audio.TargetLanguage,
					TargetParticipantIDs: audio.TargetParticipantIds,
					AudioData:            audio.AudioData,
					Format:               audio.Format,
					SampleRate:           audio.SampleRate,
					DurationMs:           audio.DurationMs,
					SpeakerParticipantID: audio.SpeakerParticipantId,
				}

				select {
				case audioChan <- msg:
				default:
					log.Printf("âš ï¸ [%s] Audio channel full, dropping TTS audio", sessionID)
				}

				// ë ˆê±°ì‹œ í˜¸í™˜: recvChanì—ë„ ì˜¤ë””ì˜¤ ë°ì´í„° ì „ì†¡
				select {
				case recvChan <- audio.AudioData:
				default:
				}

				log.Printf("ğŸ”Š [%s] TTS Audio: lang=%s, format=%s, targets=%v, size=%d bytes",
					sessionID, audio.TargetLanguage, audio.Format,
					audio.TargetParticipantIds, len(audio.AudioData))

			case *pb.ChatResponse_Error:
				// ì—ëŸ¬ ì‘ë‹µ
				errResp := payload.Error
				log.Printf("âŒ [%s] Error from AI server: code=%s, msg=%s, details=%s",
					sessionID, errResp.Code, errResp.Message, errResp.Details)

			case *pb.ChatResponse_Status:
				// ì„¸ì…˜ ìƒíƒœ ì—…ë°ì´íŠ¸
				status := payload.Status
				log.Printf("ğŸ“Š [%s] Session status: %s - %s", sessionID, status.Status, status.Message)
				if status.BufferingStrategy != nil {
					log.Printf("ğŸ“Š [%s] Buffering: src=%s, strategy=%s",
						sessionID, status.BufferingStrategy.SourceLanguage, status.BufferingStrategy.Strategy)
				}
			}
		}
	}()

	// ì •ë¦¬ ê³ ë£¨í‹´
	go func() {
		wg.Wait()
		close(errChan)
		log.Printf("ğŸ“¤ [%s] ChatStream goroutines terminated", sessionID)
	}()

	return &ChatStream{
		SendChan:       sendChan,
		RecvChan:       recvChan,
		TranscriptChan: transcriptChan,
		AudioChan:      audioChan,
		ErrChan:        errChan,
		Cancel:         cancel,
	}, nil
}

// UpdateParticipantSettings ì°¸ê°€ì ì„¤ì • ì—…ë°ì´íŠ¸ (íƒ€ê²Ÿ ì–¸ì–´ ë³€ê²½ ë“±)
func (c *GrpcClient) UpdateParticipantSettings(ctx context.Context, roomID, participantID, targetLanguage string, translationEnabled bool) error {
	req := &pb.ParticipantSettingsRequest{
		RoomId:             roomID,
		ParticipantId:      participantID,
		TargetLanguage:     targetLanguage,
		TranslationEnabled: translationEnabled,
	}

	resp, err := c.client.UpdateParticipantSettings(ctx, req)
	if err != nil {
		return err
	}

	if !resp.Success {
		log.Printf("âš ï¸ UpdateParticipantSettings failed: %s", resp.Message)
	}

	return nil
}

// SendSessionEnd ì„¸ì…˜ ì¢…ë£Œ ì‹ í˜¸ ì „ì†¡
func (c *GrpcClient) SendSessionEnd(stream grpc.ClientStreamingClient[pb.ChatRequest, pb.ChatResponse], sessionID, roomID, participantID, reason string) error {
	req := &pb.ChatRequest{
		SessionId:     sessionID,
		RoomId:        roomID,
		ParticipantId: participantID,
		Payload: &pb.ChatRequest_SessionEnd{
			SessionEnd: &pb.SessionEnd{
				Reason: reason,
			},
		},
	}
	return stream.Send(req)
}
