package handler

import (
	"encoding/json"
	"fmt"
	"log"
	"sync"
	"time"

	"github.com/gofiber/contrib/websocket"
	"gorm.io/gorm"

	"realtime-backend/internal/ai"
	"realtime-backend/internal/auth"
	"realtime-backend/internal/config"
	"realtime-backend/internal/model"
	"realtime-backend/internal/session"
)

// AudioHandler ì˜¤ë””ì˜¤ WebSocket í•¸ë“¤ëŸ¬
type AudioHandler struct {
	cfg      *config.Config
	db       *gorm.DB
	aiClient *ai.GrpcClient
}

// NewAudioHandler AudioHandler ìƒì„±ì
func NewAudioHandler(cfg *config.Config, db *gorm.DB) *AudioHandler {
	handler := &AudioHandler{cfg: cfg, db: db}

	// AI ì„œë²„ ì—°ê²° (í™œì„±í™”ëœ ê²½ìš°)
	if cfg.AI.Enabled {
		client, err := ai.NewGrpcClient(cfg.AI.ServerAddr)
		if err != nil {
			log.Printf("âš ï¸ Failed to connect to AI server: %v (running in echo mode)", err)
		} else {
			handler.aiClient = client
			log.Printf("ğŸ¤– Connected to AI server at %s", cfg.AI.ServerAddr)
		}
	} else {
		log.Println("â„¹ï¸ AI server disabled, running in echo mode")
	}

	return handler
}

// Close í•¸ë“¤ëŸ¬ ë¦¬ì†ŒìŠ¤ ì •ë¦¬
func (h *AudioHandler) Close() error {
	if h.aiClient != nil {
		return h.aiClient.Close()
	}
	return nil
}

// HandleWebSocket ì˜¤ë””ì˜¤ ìŠ¤íŠ¸ë¦¬ë° WebSocket ì—°ê²° ì²˜ë¦¬
func (h *AudioHandler) HandleWebSocket(c *websocket.Conn) {
	// íŒ¨ë‹‰ ë³µêµ¬ - ì„œë²„ í¬ë˜ì‹œ ë°©ì§€
	defer func() {
		if r := recover(); r != nil {
			log.Printf("ì˜¤ë””ì˜¤ WebSocket íŒ¨ë‹‰ ë³µêµ¬: %v", r)
		}
	}()

	// ì„¸ì…˜ ì´ˆê¸°í™”
	sess := session.New(h.cfg.Audio.ChannelBufferSize)

	// ì†ŒìŠ¤ ì–¸ì–´ íŒŒë¼ë¯¸í„° ì¶”ì¶œ (ë°œí™”ìê°€ ë§í•˜ëŠ” ì–¸ì–´)
	if sourceLang, ok := c.Locals("sourceLang").(string); ok && sourceLang != "" {
		sess.SetSourceLanguage(sourceLang)
		log.Printf("ğŸŒ [%s] Source language (speaking): %s", sess.ID, sourceLang)
	}

	// íƒ€ê²Ÿ ì–¸ì–´ íŒŒë¼ë¯¸í„° ì¶”ì¶œ (ë“£ê³  ì‹¶ì€ ì–¸ì–´)
	if targetLang, ok := c.Locals("targetLang").(string); ok && targetLang != "" {
		sess.SetLanguage(targetLang)
		log.Printf("ğŸŒ [%s] Target language (listening): %s", sess.ID, targetLang)
	}

	// ë°œí™”ì ì‹ë³„ ID ì¶”ì¶œ (Localsì—ì„œ)
	if participantId, ok := c.Locals("participantId").(string); ok && participantId != "" {
		sess.SetParticipantID(participantId)
		log.Printf("ğŸ‘¤ [%s] Participant ID: %s", sess.ID, participantId)
	}

	// ê¶Œí•œ í™•ì¸ (CONNECT_VOICE)
	workspaceIDStr := c.Params("workspaceId")
	// workspaceIDê°€ ì—†ìœ¼ë©´ ê¸€ë¡œë²Œ WSì¼ ìˆ˜ë„ ìˆì§€ë§Œ, ì—¬ê¸°ì„œëŠ” ì›Œí¬ìŠ¤í˜ì´ìŠ¤ ì»¨í…ìŠ¤íŠ¸ ê°€ì •
	if workspaceIDStr != "" {
		claims, ok := c.Locals("claims").(*auth.Claims)
		if ok {
			// int64 íŒŒì‹±
			var workspaceID int64
			fmt.Sscanf(workspaceIDStr, "%d", &workspaceID)

			hasPermission, err := auth.CheckPermission(h.db, workspaceID, claims.UserID, "CONNECT_MEDIA")
			if err != nil {
				log.Printf("âŒ [%s] Permission check failed: %v", sess.ID, err)
				h.sendErrorResponse(c, sess.ID, "PERMISSION_ERROR", "Internal server error")
				return
			}
			if !hasPermission {
				log.Printf("âŒ [%s] Permission denied: CONNECT_MEDIA", sess.ID)
				h.sendErrorResponse(c, sess.ID, "PERMISSION_DENIED", "You do not have permission to connect to media")
				return
			}
		}
	}

	log.Printf("ğŸ”— [%s] New WebSocket connection established", sess.ID)

	// Graceful Shutdown & Resource Cleanup
	defer func() {
		sess.Close()

		packetCount, audioBytes := sess.GetStats()
		log.Printf("ğŸ”Œ [%s] Connection closed. Duration: %v, Packets: %d, Total bytes: %d",
			sess.ID, sess.Duration().Round(time.Second), packetCount, audioBytes)

		if err := c.Close(); err != nil {
			log.Printf("âš ï¸ [%s] Error closing WebSocket: %v", sess.ID, err)
		}
	}()

	// Phase 1: í•¸ë“œì…°ì´í¬ (ì›Œì»¤ ì‹œì‘ ì „ì— ë¨¼ì € ìˆ˜í–‰)
	if err := h.performHandshake(c, sess); err != nil {
		log.Printf("âŒ [%s] Handshake failed: %v", sess.ID, err)
		h.sendErrorResponse(c, sess.ID, "HANDSHAKE_FAILED", err.Error())
		return
	}

	var wg sync.WaitGroup
	var writeMu sync.Mutex // WebSocket ì“°ê¸° ë™ê¸°í™”

	// AI ëª¨ë“œ ë˜ëŠ” ì—ì½” ëª¨ë“œ ì„ íƒ (í•¸ë“œì…°ì´í¬ ì™„ë£Œ í›„)
	if h.aiClient != nil {
		// AI ëª¨ë“œ: ë‹¨ì¼ gRPC ìŠ¤íŠ¸ë¦¼ìœ¼ë¡œ í†µí•©
		wg.Add(3)

		// 1. AI í†µí•© ì›Œì»¤ (ì˜¤ë””ì˜¤ ì†¡ì‹  + ì‘ë‹µ ìˆ˜ì‹ )
		go func() {
			defer wg.Done()
			h.aiUnifiedWorker(sess)
		}()

		// 2. AI ì‘ë‹µ â†’ WebSocket ì „ì†¡ (ì˜¤ë””ì˜¤)
		go func() {
			defer wg.Done()
			h.aiResponseWorker(c, sess, &writeMu)
		}()

		// 3. ìë§‰(Transcript) â†’ WebSocket ì „ì†¡
		go func() {
			defer wg.Done()
			h.transcriptWorker(c, sess, &writeMu)
		}()
	} else {
		// ì—ì½” ëª¨ë“œ
		wg.Add(2)

		go func() {
			defer wg.Done()
			h.processingWorkerEcho(sess)
		}()

		go func() {
			defer wg.Done()
			h.echoWorker(c, sess)
		}()
	}

	// Phase 2: ì˜¤ë””ì˜¤ ìŠ¤íŠ¸ë¦¬ë° ìˆ˜ì‹  ë£¨í”„
	h.receiveLoop(c, sess)

	wg.Wait()
}

// performHandshake ë©”íƒ€ë°ì´í„° í—¤ë” ìˆ˜ì‹  ë° ê²€ì¦
func (h *AudioHandler) performHandshake(c *websocket.Conn, sess *session.Session) error {
	deadline := time.Now().Add(h.cfg.WebSocket.HandshakeTimeout)
	if err := c.SetReadDeadline(deadline); err != nil {
		return fmt.Errorf("failed to set read deadline: %w", err)
	}

	messageType, msg, err := c.ReadMessage()
	if err != nil {
		return fmt.Errorf("failed to read header: %w", err)
	}

	if messageType != websocket.BinaryMessage {
		return fmt.Errorf("expected binary message, got type %d", messageType)
	}

	metadata, err := model.ParseMetadata(msg)
	if err != nil {
		return err
	}

	if err := metadata.Validate(&h.cfg.Audio); err != nil {
		return fmt.Errorf("invalid metadata: %w", err)
	}

	sess.SetMetadata(metadata)

	log.Printf("ğŸ“‹ [%s] Metadata: SampleRate=%d, Channels=%d, BitsPerSample=%d",
		sess.ID, metadata.SampleRate, metadata.Channels, metadata.BitsPerSample)

	readyResponse := fmt.Sprintf(`{"status":"ready","session_id":"%s","mode":"%s"}`,
		sess.ID, h.getMode())

	if err := c.SetWriteDeadline(time.Now().Add(h.cfg.WebSocket.WriteTimeout)); err != nil {
		return fmt.Errorf("failed to set write deadline: %w", err)
	}

	if err := c.WriteMessage(websocket.TextMessage, []byte(readyResponse)); err != nil {
		return fmt.Errorf("failed to send ready response: %w", err)
	}

	if err := c.SetReadDeadline(time.Time{}); err != nil {
		return fmt.Errorf("failed to clear read deadline: %w", err)
	}

	log.Printf("âœ… [%s] Handshake complete. Mode: %s", sess.ID, h.getMode())
	return nil
}

func (h *AudioHandler) getMode() string {
	if h.aiClient != nil {
		return "ai"
	}
	return "echo"
}

// receiveLoop ì˜¤ë””ì˜¤ ë°ì´í„° ìˆ˜ì‹  ë° ì±„ë„ ì „ë‹¬
func (h *AudioHandler) receiveLoop(c *websocket.Conn, sess *session.Session) {
	for {
		select {
		case <-sess.Context().Done():
			log.Printf("â„¹ï¸ [%s] Receive loop terminated by context", sess.ID)
			return
		default:
		}

		messageType, msg, err := c.ReadMessage()
		if err != nil {
			if websocket.IsCloseError(err, websocket.CloseNormalClosure, websocket.CloseGoingAway) {
				log.Printf("â„¹ï¸ [%s] Client disconnected normally", sess.ID)
			} else if websocket.IsUnexpectedCloseError(err) {
				log.Printf("âš ï¸ [%s] Unexpected disconnect: %v", sess.ID, err)
			} else {
				log.Printf("âŒ [%s] Read error: %v", sess.ID, err)
			}
			return
		}

		if messageType != websocket.BinaryMessage {
			log.Printf("âš ï¸ [%s] Ignoring non-binary message (type: %d)", sess.ID, messageType)
			continue
		}

		if len(msg) == 0 {
			continue
		}

		// Deep Copy
		dataCopy := make([]byte, len(msg))
		copy(dataCopy, msg)

		seqNum := sess.IncrementPacketCount()
		packet := &model.AudioPacket{
			Data:      dataCopy,
			Timestamp: time.Now(),
			SeqNum:    seqNum,
		}

		sess.AddAudioBytes(int64(len(dataCopy)))

		// Non-blocking send
		select {
		case sess.AudioPackets <- packet:
		default:
			log.Printf("âš ï¸ [%s] Audio buffer full, dropping packet #%d", sess.ID, seqNum)
		}
	}
}

// ============================================================================
// AI ëª¨ë“œ ì›Œì»¤ë“¤
// ============================================================================

// aiUnifiedWorker ë‹¨ì¼ gRPC ìŠ¤íŠ¸ë¦¼ìœ¼ë¡œ ì˜¤ë””ì˜¤ ì†¡ìˆ˜ì‹  í†µí•© ì²˜ë¦¬
func (h *AudioHandler) aiUnifiedWorker(sess *session.Session) {
	log.Printf("ğŸ¤– [%s] AI unified worker started", sess.ID)
	defer log.Printf("ğŸ¤– [%s] AI unified worker stopped", sess.ID)

	// ì„¸ì…˜ ì„¤ì • ì •ë³´ êµ¬ì„±
	metadata := sess.GetMetadata()
	participantID := sess.GetParticipantID()
	sourceLang := sess.GetSourceLanguage() // ë°œí™”ìê°€ ë§í•˜ëŠ” ì–¸ì–´
	targetLang := sess.GetLanguage()       // ë“£ê³  ì‹¶ì€ ì–¸ì–´

	log.Printf("ğŸŒ [%s] Language config: source=%s, target=%s", sess.ID, sourceLang, targetLang)

	// ë°œí™”ì ì„¤ì • - ë°œí™”ìê°€ ë§í•˜ëŠ” ì–¸ì–´ ì‚¬ìš©
	speaker := &ai.SpeakerConfig{
		ParticipantID:  participantID,
		Nickname:       participantID, // TODO: ì‹¤ì œ ë‹‰ë„¤ì„ ê°€ì ¸ì˜¤ê¸°
		SourceLanguage: sourceLang,    // ë°œí™”ìê°€ ë§í•˜ëŠ” ì–¸ì–´
	}

	// ì°¸ê°€ì ì„¤ì • - ë“£ëŠ” ì‚¬ëŒì˜ íƒ€ê²Ÿ ì–¸ì–´ ì‚¬ìš©
	// TODO: ì‹¤ì œ ì°¸ê°€ì ëª©ë¡ ê°€ì ¸ì˜¤ê¸° (í˜„ì¬ëŠ” ìê¸° ìì‹ ë§Œ)
	participants := []ai.ParticipantConfig{
		{
			ParticipantID:      participantID,
			Nickname:           participantID,
			TargetLanguage:     targetLang, // ë“£ê³  ì‹¶ì€ ì–¸ì–´
			TranslationEnabled: sourceLang != targetLang, // ì†ŒìŠ¤ì™€ íƒ€ê²Ÿì´ ë‹¤ë¥´ë©´ ë²ˆì—­ í™œì„±í™”
		},
	}

	var config *ai.SessionConfig
	if metadata != nil {
		config = &ai.SessionConfig{
			SampleRate:     metadata.SampleRate,
			Channels:       uint32(metadata.Channels),
			BitsPerSample:  uint32(metadata.BitsPerSample),
			SourceLanguage: sourceLang, // ë°œí™”ìê°€ ë§í•˜ëŠ” ì–¸ì–´
			Participants:   participants,
			Speaker:        speaker,
		}
	} else {
		// ë©”íƒ€ë°ì´í„°ê°€ ì—†ëŠ” ê²½ìš° ê¸°ë³¸ê°’ ì‚¬ìš©
		config = &ai.SessionConfig{
			SampleRate:     16000,
			Channels:       1,
			BitsPerSample:  16,
			SourceLanguage: sourceLang, // ë°œí™”ìê°€ ë§í•˜ëŠ” ì–¸ì–´
			Participants:   participants,
			Speaker:        speaker,
		}
	}

	// ë‹¨ì¼ gRPC ìŠ¤íŠ¸ë¦¼ ì‹œì‘ (SessionConfig ì „ë‹¬)
	roomID := sess.ID // TODO: ì‹¤ì œ room ID ì‚¬ìš©
	chatStream, err := h.aiClient.StartChatStream(sess.Context(), sess.ID, roomID, config)
	if err != nil {
		log.Printf("âŒ [%s] Failed to start AI stream: %v", sess.ID, err)
		return
	}
	defer chatStream.Cancel()

	// ì†¡ì‹  ê³ ë£¨í‹´: AudioPackets â†’ gRPC
	go func() {
		for {
			select {
			case <-sess.Context().Done():
				return
			case packet, ok := <-sess.AudioPackets:
				if !ok {
					return
				}
				metadata := sess.GetMetadata()
				if metadata == nil {
					continue
				}
				// gRPCë¡œ ì „ì†¡ (Non-blocking)
				select {
				case chatStream.SendChan <- packet.Data:
				default:
					log.Printf("âš ï¸ [%s] gRPC send buffer full, dropping packet #%d", sess.ID, packet.SeqNum)
				}
			}
		}
	}()

	// ìˆ˜ì‹  ë£¨í”„: gRPC â†’ ì„¸ì…˜ ì±„ë„ë“¤
	for {
		select {
		case <-sess.Context().Done():
			return

		case transcript, ok := <-chatStream.TranscriptChan:
			if !ok {
				return
			}
			log.Printf("ğŸ“ [%s] AI Transcript received: %s (partial=%v, final=%v)",
				sess.ID, transcript.OriginalText, transcript.IsPartial, transcript.IsFinal)

			// Partial ê²°ê³¼ëŠ” ë¬´ì‹œ (ë˜ëŠ” ì‹¤ì‹œê°„ í‘œì‹œìš©ìœ¼ë¡œ ì „ì†¡)
			if transcript.IsPartial {
				log.Printf("ğŸ“ [%s] Partial STT (ignored): %s", sess.ID, transcript.OriginalText)
				continue
			}

			// ë²ˆì—­ ê²°ê³¼ ì¶”ì¶œ (ì²« ë²ˆì§¸ ë²ˆì—­ ì‚¬ìš©)
			var translatedText string
			if len(transcript.Translations) > 0 {
				translatedText = transcript.Translations[0].TranslatedText
			}

			// ì›ë³¸ê³¼ ë²ˆì—­ì´ ê°™ìœ¼ë©´ ë²ˆì—­ ì—†ìŒ
			if translatedText == transcript.OriginalText {
				translatedText = ""
			}

			transcriptMsg := &session.TranscriptMessage{
				Type:          "transcript",
				ParticipantID: sess.GetParticipantID(),
				Text:          transcript.OriginalText,
				Original:      transcript.OriginalText,
				Translated:    translatedText,
				Language:      transcript.OriginalLanguage,
				IsFinal:       transcript.IsFinal,
			}

			select {
			case sess.TranscriptChan <- transcriptMsg:
				if translatedText != "" {
					log.Printf("ğŸ“ [%s] Transcript sent: original=%s, translated=%s",
						sess.ID, transcript.OriginalText, translatedText)
				} else {
					log.Printf("ğŸ“ [%s] Transcript sent: %s", sess.ID, transcript.OriginalText)
				}
			default:
				log.Printf("âš ï¸ [%s] Transcript buffer full, dropping message", sess.ID)
			}

		case audioMsg, ok := <-chatStream.AudioChan:
			if !ok {
				return
			}
			log.Printf("ğŸ”Š [%s] AI Audio received: lang=%s, speaker=%s, size=%d bytes",
				sess.ID, audioMsg.TargetLanguage, audioMsg.SpeakerParticipantID, len(audioMsg.AudioData))

			// Self-muteëŠ” í”„ë¡ íŠ¸ì—”ë“œì—ì„œ ì²˜ë¦¬ (useRemoteParticipantTranslation.ts)
			// ë°±ì—”ë“œëŠ” ëª¨ë“  TTS ì˜¤ë””ì˜¤ë¥¼ ì „ì†¡

			// AI ì‘ë‹µ ì˜¤ë””ì˜¤ â†’ ì—ì½” ì±„ë„ (Non-blocking)
			select {
			case sess.EchoPackets <- audioMsg.AudioData:
				log.Printf("ğŸ”Š [%s] TTS audio sent to WebSocket", sess.ID)
			default:
				log.Printf("âš ï¸ [%s] Echo buffer full, dropping AI audio response", sess.ID)
			}

		case err, ok := <-chatStream.ErrChan:
			if !ok {
				return
			}
			if err != nil {
				log.Printf("âŒ [%s] AI stream error: %v", sess.ID, err)
			}
			return
		}
	}
}

// aiResponseWorker AI ì˜¤ë””ì˜¤ ì‘ë‹µì„ WebSocketìœ¼ë¡œ ì „ì†¡
func (h *AudioHandler) aiResponseWorker(c *websocket.Conn, sess *session.Session, writeMu *sync.Mutex) {
	log.Printf("ğŸ“¤ [%s] AI response worker started", sess.ID)
	defer log.Printf("ğŸ“¤ [%s] AI response worker stopped", sess.ID)

	for {
		select {
		case <-sess.Context().Done():
			return

		case data, ok := <-sess.EchoPackets:
			if !ok {
				return
			}

			writeMu.Lock()
			if err := c.SetWriteDeadline(time.Now().Add(h.cfg.WebSocket.WriteTimeout)); err != nil {
				writeMu.Unlock()
				log.Printf("âš ï¸ [%s] Failed to set write deadline: %v", sess.ID, err)
				continue
			}

			if err := c.WriteMessage(websocket.BinaryMessage, data); err != nil {
				writeMu.Unlock()
				log.Printf("âš ï¸ [%s] Failed to send AI audio response: %v", sess.ID, err)
				return
			}
			writeMu.Unlock()
		}
	}
}

// transcriptWorker ìë§‰ ë©”ì‹œì§€ë¥¼ WebSocketìœ¼ë¡œ ì „ì†¡
func (h *AudioHandler) transcriptWorker(c *websocket.Conn, sess *session.Session, writeMu *sync.Mutex) {
	log.Printf("ğŸ“ [%s] Transcript worker started", sess.ID)
	defer log.Printf("ğŸ“ [%s] Transcript worker stopped", sess.ID)

	for {
		select {
		case <-sess.Context().Done():
			return

		case msg, ok := <-sess.TranscriptChan:
			if !ok {
				return
			}

			writeMu.Lock()
			if err := c.SetWriteDeadline(time.Now().Add(h.cfg.WebSocket.WriteTimeout)); err != nil {
				writeMu.Unlock()
				log.Printf("âš ï¸ [%s] Failed to set write deadline for transcript: %v", sess.ID, err)
				continue
			}

			// JSON í˜•ì‹ìœ¼ë¡œ ì „ì†¡ (íŠ¹ìˆ˜ë¬¸ì ì´ìŠ¤ì¼€ì´í”„ ì²˜ë¦¬)
			jsonData, err := json.Marshal(msg)
			if err != nil {
				writeMu.Unlock()
				log.Printf("âš ï¸ [%s] Failed to marshal transcript: %v", sess.ID, err)
				continue
			}

			if err := c.WriteMessage(websocket.TextMessage, jsonData); err != nil {
				writeMu.Unlock()
				log.Printf("âš ï¸ [%s] Failed to send transcript: %v", sess.ID, err)
				return
			}
			writeMu.Unlock()

			log.Printf("ğŸ“¤ [%s] Transcript sent to WebSocket: %s", sess.ID, msg.Text)
		}
	}
}

// ============================================================================
// ì—ì½” ëª¨ë“œ ì›Œì»¤ë“¤ (AI ë¹„í™œì„±í™” ì‹œ)
// ============================================================================

// processingWorkerEcho ì—ì½” ëª¨ë“œ: ìˆ˜ì‹  ì˜¤ë””ì˜¤ë¥¼ ê·¸ëŒ€ë¡œ ë°˜í™˜
func (h *AudioHandler) processingWorkerEcho(sess *session.Session) {
	log.Printf("ğŸ§ [%s] Echo processing worker started", sess.ID)
	defer log.Printf("ğŸ§ [%s] Echo processing worker stopped", sess.ID)

	for {
		select {
		case <-sess.Context().Done():
			remaining := len(sess.AudioPackets)
			if remaining > 0 {
				log.Printf("â„¹ï¸ [%s] Draining %d remaining packets", sess.ID, remaining)
			}
			return

		case packet, ok := <-sess.AudioPackets:
			if !ok {
				return
			}

			metadata := sess.GetMetadata()
			if metadata == nil {
				continue
			}

			// ì—ì½”: ìˆ˜ì‹ í•œ ì˜¤ë””ì˜¤ë¥¼ ê·¸ëŒ€ë¡œ ë°˜í™˜
			select {
			case sess.EchoPackets <- packet.Data:
			default:
				log.Printf("âš ï¸ [%s] Echo buffer full, dropping packet #%d", sess.ID, packet.SeqNum)
			}
		}
	}
}

// echoWorker ì—ì½” íŒ¨í‚·ì„ í´ë¼ì´ì–¸íŠ¸ë¡œ ì „ì†¡
func (h *AudioHandler) echoWorker(c *websocket.Conn, sess *session.Session) {
	log.Printf("ğŸ“¤ [%s] Echo worker started", sess.ID)
	defer log.Printf("ğŸ“¤ [%s] Echo worker stopped", sess.ID)

	for {
		select {
		case <-sess.Context().Done():
			return

		case data, ok := <-sess.EchoPackets:
			if !ok {
				return
			}

			if err := c.SetWriteDeadline(time.Now().Add(h.cfg.WebSocket.WriteTimeout)); err != nil {
				log.Printf("âš ï¸ [%s] Failed to set write deadline: %v", sess.ID, err)
				continue
			}

			if err := c.WriteMessage(websocket.BinaryMessage, data); err != nil {
				log.Printf("âš ï¸ [%s] Failed to send echo: %v", sess.ID, err)
				return
			}
		}
	}
}

// sendErrorResponse ì—ëŸ¬ ì‘ë‹µ ì „ì†¡
func (h *AudioHandler) sendErrorResponse(c *websocket.Conn, sessionID, code, message string) {
	response := fmt.Sprintf(`{"status":"error","code":"%s","message":"%s","session_id":"%s"}`,
		code, message, sessionID)

	_ = c.SetWriteDeadline(time.Now().Add(h.cfg.WebSocket.WriteTimeout))

	if err := c.WriteMessage(websocket.TextMessage, []byte(response)); err != nil {
		log.Printf("âš ï¸ [%s] Failed to send error response: %v", sessionID, err)
	}
}
