package server

import (
	"log"
	"os"
	"os/signal"
	"syscall"
	"time"

	"github.com/gofiber/contrib/websocket"
	"github.com/gofiber/fiber/v2"
	"github.com/gofiber/fiber/v2/middleware/cors"
	"github.com/gofiber/fiber/v2/middleware/limiter"
	"github.com/gofiber/fiber/v2/middleware/logger"
	"github.com/gofiber/fiber/v2/middleware/recover"
	"gorm.io/gorm"

	"realtime-backend/internal/auth"
	"realtime-backend/internal/cache"
	"realtime-backend/internal/config"
	"realtime-backend/internal/handler"
	"realtime-backend/internal/middleware"
	"realtime-backend/internal/model"
	"realtime-backend/internal/presence"
	"realtime-backend/internal/service"
	"realtime-backend/internal/storage"
)

// Server Fiber ì„œë²„ ë˜í¼
type Server struct {
	app                        *fiber.App
	cfg                        *config.Config
	db                         *gorm.DB
	handler                    *handler.AudioHandler
	authHandler                *handler.AuthHandler
	userHandler                *handler.UserHandler
	workspaceHandler           *handler.WorkspaceHandler
	categoryHandler            *handler.CategoryHandler
	notificationHandler        *handler.NotificationHandler
	notificationWSHandler      *handler.NotificationWSHandler
	chatHandler                *handler.ChatHandler
	chatWSHandler              *handler.ChatWSHandler
	meetingHandler             *handler.MeetingHandler
	calendarHandler            *handler.CalendarHandler
	storageHandler             *handler.StorageHandler
	roleHandler                *handler.RoleHandler
	videoHandler               *handler.VideoHandler
	whiteboardHandler          *handler.WhiteboardHandler
	voiceRecordHandler         *handler.VoiceRecordHandler
	voiceParticipantsWSHandler *handler.VoiceParticipantsWSHandler
	healthHandler              *handler.HealthHandler
	pollHandler                *handler.PollHandler
	jwtManager                 *auth.JWTManager
	memberService              *service.MemberService
	workspaceMW                *middleware.WorkspaceMiddleware
}

// New ìƒˆ ì„œë²„ ì¸ìŠ¤í„´ìŠ¤ ìƒì„±
func New(cfg *config.Config, db *gorm.DB) *Server {
	app := fiber.New(fiber.Config{
		AppName:               "Realtime Voice AI Gateway",
		ServerHeader:          "Fiber",
		StrictRouting:         true,
		CaseSensitive:         true,
		ReadTimeout:           cfg.Server.ReadTimeout,
		WriteTimeout:          cfg.Server.WriteTimeout,
		IdleTimeout:           cfg.Server.IdleTimeout,
		Prefork:               false, // WebSocketê³¼ í˜¸í™˜ì„± ë¬¸ì œë¡œ ë¹„í™œì„±í™”
		ReadBufferSize:        16384, // 16KB - í° í—¤ë” í—ˆìš©
		WriteBufferSize:       16384,
		BodyLimit:             10 * 1024 * 1024, // 10MB
		DisableStartupMessage: false,
	})

	// Auth ì´ˆê¸°í™”
	// Redis Presence Manager ì´ˆê¸°í™”
	presenceManager := presence.NewManager(
		cfg.Redis.Addr,
		cfg.Redis.Password,
		cfg.Redis.DB,
	)

	jwtManager := auth.NewJWTManager(
		cfg.Auth.JWTSecret,
		cfg.Auth.AccessTokenExpiry,
		cfg.Auth.RefreshTokenExpiry,
	)
	googleAuth := auth.NewGoogleAuthenticator(cfg.Auth.GoogleClientID)
	authHandler := handler.NewAuthHandler(db, jwtManager, googleAuth, cfg.Auth.SecureCookie)
	userHandler := handler.NewUserHandler(db, presenceManager)
	workspaceHandler := handler.NewWorkspaceHandler(db)
	categoryHandler := handler.NewCategoryHandler(db)
	notificationHandler := handler.NewNotificationHandler(db)
	notificationWSHandler := handler.NewNotificationWSHandler(db, presenceManager)
	chatHandler := handler.NewChatHandler(db)
	chatWSHandler := handler.NewChatWSHandler(db)
	meetingHandler := handler.NewMeetingHandler(db)
	calendarHandler := handler.NewCalendarHandler(db)
	roleHandler := handler.NewRoleHandler(db)
	videoHandler := handler.NewVideoHandler(cfg, db)
	whiteboardHandler := handler.NewWhiteboardHandler(db)
	voiceRecordHandler := handler.NewVoiceRecordHandler(db)
	voiceParticipantsWSHandler := handler.NewVoiceParticipantsWSHandler(cfg)

	// S3 ì„œë¹„ìŠ¤ ì´ˆê¸°í™” (ì„ íƒì )
	var s3Service *storage.S3Service
	if cfg.S3.BucketName != "" && cfg.S3.AccessKeyID != "" {
		var err error
		s3Service, err = storage.NewS3Service(&cfg.S3)
		if err != nil {
			log.Printf("âš ï¸ S3 service initialization failed: %v (file upload will be disabled)", err)
		} else {
			log.Printf("âœ… S3 service initialized (bucket: %s)", cfg.S3.BucketName)
		}
	} else {
		log.Println("â„¹ï¸ S3 service not configured (file upload will be disabled)")
	}
	storageHandler := handler.NewStorageHandler(db, s3Service)
	healthHandler := handler.NewHealthHandler(db, cfg.AI.ServerAddr)

	// Service ë ˆì´ì–´ ì´ˆê¸°í™”
	memberService := service.NewMemberService(db)
	workspaceMW := middleware.NewWorkspaceMiddleware(memberService)

	// Audio handler ìƒì„± ë° DB ì„¤ì •
	audioHandler := handler.NewAudioHandler(cfg, db)
	if roomHub := audioHandler.GetRoomHub(); roomHub != nil {
		roomHub.SetDB(db)
	}

	// Poll Handler ì´ˆê¸°í™” (Redis ì¬ì‚¬ìš© ë˜ëŠ” ì‹ ê·œ ìƒì„±)
	var pollHandler *handler.PollHandler
	if cfg.Redis.Enabled && cfg.Redis.Addr != "" {
		// ì˜¤ë””ì˜¤ í•¸ë“¤ëŸ¬ì™€ ë³„ë„ë¡œ Redis ì—°ê²° ìƒì„± (ì»¤ë„¥ì…˜ í’€ë§ìœ¼ë¡œ íš¨ìœ¨ì )
		redisClient, err := cache.NewRedisClient(cfg.Redis.Addr, cfg.Redis.Password)
		if err != nil {
			log.Printf("âš ï¸ PollHandler Redis connection failed: %v", err)
		} else {
			pollHandler = handler.NewPollHandler(redisClient)
			log.Println("ğŸ“Š PollHandler initialized with Redis")
		}
	}

	return &Server{
		app:                   app,
		cfg:                   cfg,
		db:                    db,
		handler:               audioHandler,
		authHandler:           authHandler,
		userHandler:           userHandler,
		workspaceHandler:      workspaceHandler,
		categoryHandler:       categoryHandler,
		notificationHandler:   notificationHandler,
		notificationWSHandler: notificationWSHandler,
		chatHandler:           chatHandler,
		chatWSHandler:         chatWSHandler,
		meetingHandler:        meetingHandler,
		calendarHandler:       calendarHandler,
		storageHandler:        storageHandler,
		roleHandler:           roleHandler,
		videoHandler:               videoHandler,
		whiteboardHandler:          whiteboardHandler,
		voiceRecordHandler:         voiceRecordHandler,
		voiceParticipantsWSHandler: voiceParticipantsWSHandler,
		healthHandler:              healthHandler,
		pollHandler:                pollHandler, // Added
		jwtManager:                 jwtManager,
		memberService:              memberService,
		workspaceMW:                workspaceMW,
	}
}

// SetupMiddleware ë¯¸ë“¤ì›¨ì–´ ì„¤ì •
func (s *Server) SetupMiddleware() {
	// íŒ¨ë‹‰ ë³µêµ¬
	s.app.Use(recover.New(recover.Config{
		EnableStackTrace: true,
	}))

	// ë¡œê¹…
	s.app.Use(logger.New(logger.Config{
		Format:     "${time} | ${status} | ${latency} | ${ip} | ${method} ${path}\n",
		TimeFormat: "2006-01-02 15:04:05",
		TimeZone:   "Asia/Seoul",
	}))

	// CORS
	s.app.Use(cors.New(cors.Config{
		AllowOrigins:     s.cfg.CORS.AllowOrigins,
		AllowHeaders:     "Origin, Content-Type, Accept, Authorization",
		AllowMethods:     "GET, POST, PUT, DELETE, OPTIONS",
		AllowCredentials: true,
	}))

	// ì •ì  íŒŒì¼ ì œê³µ (ì—…ë¡œë“œëœ íŒŒì¼)
	s.app.Static("/uploads", "./uploads")
}

// SetupRoutes ë¼ìš°íŠ¸ ì„¤ì •
func (s *Server) SetupRoutes() {
	// í—¬ìŠ¤ì²´í¬ ì—”ë“œí¬ì¸íŠ¸
	s.app.Get("/", s.healthHandler.Liveness)              // ALB í—¬ìŠ¤ì²´í¬ìš©
	s.app.Get("/health", s.healthHandler.Check)           // ì „ì²´ ìƒíƒœ (DB + AI)
	s.app.Get("/health/live", s.healthHandler.Liveness)   // K8s liveness probe
	s.app.Get("/health/ready", s.healthHandler.Readiness) // K8s readiness probe

	// Rate Limiter ì„¤ì • (ì¸ì¦ ì—”ë“œí¬ì¸íŠ¸ìš© - Brute Force ë°©ì§€)
	authLimiter := limiter.New(limiter.Config{
		Max:        10,              // ìµœëŒ€ 10íšŒ
		Expiration: 1 * time.Minute, // 1ë¶„ë‹¹
		KeyGenerator: func(c *fiber.Ctx) string {
			return c.IP() // IP ê¸°ë°˜ ì œí•œ
		},
		LimitReached: func(c *fiber.Ctx) error {
			return c.Status(fiber.StatusTooManyRequests).JSON(fiber.Map{
				"error": "too many requests, please try again later",
			})
		},
	})

	// API ê·¸ë£¹
	api := s.app.Group("/api")

	// ... (Existing routes) ...
	// Poll Routes (Requires Auth)
	if s.pollHandler != nil {
		poll := api.Group("/polls", auth.AuthMiddleware(s.jwtManager))
		poll.Post("", s.pollHandler.CreatePoll)
		poll.Get("/:id", s.pollHandler.GetPoll)
		poll.Post("/:id/vote", s.pollHandler.Vote)
		poll.Post("/:id/close", s.pollHandler.ClosePoll)
	}

	// Auth ë¼ìš°íŠ¸ ê·¸ë£¹
	authGroup := s.app.Group("/auth")
	authGroup.Post("/google", authLimiter, s.authHandler.GoogleLogin)
	authGroup.Post("/refresh", authLimiter, s.authHandler.RefreshToken)
	authGroup.Post("/logout", auth.AuthMiddleware(s.jwtManager), s.authHandler.Logout) // ì¸ì¦ëœ ì‚¬ìš©ìë§Œ
	authGroup.Get("/me", auth.AuthMiddleware(s.jwtManager), s.authHandler.GetMe)
	authGroup.Put("/me", auth.AuthMiddleware(s.jwtManager), s.userHandler.UpdateUser)
	authGroup.Put("/me/status", auth.AuthMiddleware(s.jwtManager), s.userHandler.UpdateUserStatus) // ìƒíƒœ ì—…ë°ì´íŠ¸ ì—”ë“œí¬ì¸íŠ¸ ì¶”ê°€

	// User ë¼ìš°íŠ¸ ê·¸ë£¹ (ì¸ì¦ í•„ìš”)
	userGroup := s.app.Group("/api/users", auth.AuthMiddleware(s.jwtManager))
	userGroup.Get("/search", s.userHandler.SearchUsers)

	// Notification ë¼ìš°íŠ¸ ê·¸ë£¹ (ì¸ì¦ í•„ìš”)
	notificationGroup := s.app.Group("/api/notifications", auth.AuthMiddleware(s.jwtManager))
	notificationGroup.Get("", s.notificationHandler.GetMyNotifications)
	notificationGroup.Post("/:id/accept", s.notificationHandler.AcceptInvitation)
	notificationGroup.Post("/:id/decline", s.notificationHandler.DeclineInvitation)
	notificationGroup.Post("/:id/read", s.notificationHandler.MarkAsRead)

	// Workspace Category ë¼ìš°íŠ¸ ê·¸ë£¹ (ì¸ì¦ í•„ìš”)
	categoryGroup := s.app.Group("/api/workspace-categories", auth.AuthMiddleware(s.jwtManager))
	categoryGroup.Get("", s.categoryHandler.GetMyCategories)
	categoryGroup.Post("", s.categoryHandler.CreateCategory)
	categoryGroup.Put("/:categoryId", s.categoryHandler.UpdateCategory)
	categoryGroup.Delete("/:categoryId", s.categoryHandler.DeleteCategory)
	categoryGroup.Post("/:categoryId/workspaces/:workspaceId", s.categoryHandler.AddWorkspaceToCategory)
	categoryGroup.Delete("/:categoryId/workspaces/:workspaceId", s.categoryHandler.RemoveWorkspaceFromCategory)

	// Workspace ë¼ìš°íŠ¸ ê·¸ë£¹ (ì¸ì¦ í•„ìš”)
	workspaceGroup := s.app.Group("/api/workspaces", auth.AuthMiddleware(s.jwtManager))
	workspaceGroup.Post("/", s.workspaceHandler.CreateWorkspace)
	workspaceGroup.Get("/", s.workspaceHandler.GetMyWorkspaces)
	workspaceGroup.Get("/:id", s.workspaceHandler.GetWorkspace)
	workspaceGroup.Post("/:id/members", s.workspaceHandler.AddMembers)
	workspaceGroup.Delete("/:id/leave", s.workspaceHandler.LeaveWorkspace)
	workspaceGroup.Put("/:id/members/:userId/role", s.workspaceHandler.UpdateMemberRole)
	workspaceGroup.Delete("/:id/members/:userId", s.workspaceHandler.KickMember)
	workspaceGroup.Put("/:id", s.workspaceHandler.UpdateWorkspace)
	workspaceGroup.Delete("/:id", s.workspaceHandler.DeleteWorkspace)

	// Role ë¼ìš°íŠ¸ (ì›Œí¬ìŠ¤í˜ì´ìŠ¤ í•˜ìœ„)
	workspaceGroup.Get("/:id/roles", s.roleHandler.GetRoles)
	workspaceGroup.Post("/:id/roles", s.roleHandler.CreateRole)
	workspaceGroup.Put("/:id/roles/:roleId", s.roleHandler.UpdateRole)
	workspaceGroup.Delete("/:id/roles/:roleId", s.roleHandler.DeleteRole)

	// Chat ë¼ìš°íŠ¸ (ì›Œí¬ìŠ¤í˜ì´ìŠ¤ í•˜ìœ„) - ë ˆê±°ì‹œ
	workspaceGroup.Get("/:workspaceId/chats", s.chatHandler.GetWorkspaceChats)
	workspaceGroup.Post("/:workspaceId/chats", s.chatHandler.SendMessage)

	// Chat Room ë¼ìš°íŠ¸ (ë‹¤ì¤‘ ì±„íŒ…ë°©)
	workspaceGroup.Get("/:workspaceId/chatrooms", s.chatHandler.GetChatRooms)
	workspaceGroup.Post("/:workspaceId/chatrooms", s.chatHandler.CreateChatRoom)
	workspaceGroup.Put("/:workspaceId/chatrooms/:roomId", s.chatHandler.UpdateChatRoom)
	workspaceGroup.Delete("/:workspaceId/chatrooms/:roomId", s.chatHandler.DeleteChatRoom)
	workspaceGroup.Get("/:workspaceId/chatrooms/:roomId/messages", s.chatHandler.GetChatRoomMessages)
	workspaceGroup.Post("/:workspaceId/chatrooms/:roomId/messages", s.chatHandler.SendChatRoomMessage)
	workspaceGroup.Post("/:workspaceId/chatrooms/:roomId/read", s.chatHandler.MarkAsRead)

	// Meeting ë¼ìš°íŠ¸ (ì›Œí¬ìŠ¤í˜ì´ìŠ¤ í•˜ìœ„)
	workspaceGroup.Get("/:workspaceId/meetings", s.meetingHandler.GetWorkspaceMeetings)
	workspaceGroup.Post("/:workspaceId/meetings", s.meetingHandler.CreateMeeting)
	workspaceGroup.Get("/:workspaceId/meetings/:meetingId", s.meetingHandler.GetMeeting)
	workspaceGroup.Post("/:workspaceId/meetings/:meetingId/start", s.meetingHandler.StartMeeting)

	// DM ë¼ìš°íŠ¸
	workspaceGroup.Post("/:workspaceId/dm", s.chatHandler.GetOrCreateDMRoom)
	workspaceGroup.Get("/:workspaceId/dm", s.chatHandler.GetMyDMs)
	workspaceGroup.Post("/:workspaceId/meetings/:meetingId/end", s.meetingHandler.EndMeeting)

	// Voice Record ë¼ìš°íŠ¸ (ë¯¸íŒ… í•˜ìœ„)
	workspaceGroup.Get("/:workspaceId/meetings/:meetingId/voice-records", s.voiceRecordHandler.GetVoiceRecords)
	workspaceGroup.Post("/:workspaceId/meetings/:meetingId/voice-records", s.voiceRecordHandler.CreateVoiceRecord)
	workspaceGroup.Post("/:workspaceId/meetings/:meetingId/voice-records/bulk", s.voiceRecordHandler.CreateVoiceRecordBulk)
	workspaceGroup.Delete("/:workspaceId/meetings/:meetingId/voice-records", s.voiceRecordHandler.DeleteVoiceRecords)

	// Calendar ë¼ìš°íŠ¸ (ì›Œí¬ìŠ¤í˜ì´ìŠ¤ í•˜ìœ„)
	workspaceGroup.Get("/:workspaceId/events", s.calendarHandler.GetWorkspaceEvents)
	workspaceGroup.Post("/:workspaceId/events", s.calendarHandler.CreateEvent)
	workspaceGroup.Put("/:workspaceId/events/:eventId", s.calendarHandler.UpdateEvent)
	workspaceGroup.Delete("/:workspaceId/events/:eventId", s.calendarHandler.DeleteEvent)
	workspaceGroup.Put("/:workspaceId/events/:eventId/status", s.calendarHandler.UpdateAttendeeStatus)

	// Storage ë¼ìš°íŠ¸ (ì›Œí¬ìŠ¤í˜ì´ìŠ¤ í•˜ìœ„)
	workspaceGroup.Get("/:workspaceId/files", s.storageHandler.GetWorkspaceFiles)
	workspaceGroup.Post("/:workspaceId/files/folder", s.storageHandler.CreateFolder)
	workspaceGroup.Post("/:workspaceId/files", s.storageHandler.UploadFile)
	workspaceGroup.Delete("/:workspaceId/files/:fileId", s.storageHandler.DeleteFile)
	workspaceGroup.Put("/:workspaceId/files/:fileId", s.storageHandler.RenameFile)

	// S3 íŒŒì¼ ì—…ë¡œë“œ ë¼ìš°íŠ¸
	workspaceGroup.Post("/:workspaceId/files/presign", s.storageHandler.GetPresignedURL)
	workspaceGroup.Post("/:workspaceId/files/confirm", s.storageHandler.ConfirmUpload)
	workspaceGroup.Get("/:workspaceId/files/:fileId/download", s.storageHandler.GetDownloadURL)

	// Video Call ë¼ìš°íŠ¸
	s.app.Post("/api/video/token", auth.AuthMiddleware(s.jwtManager), s.videoHandler.GenerateToken)
	s.app.Get("/api/video/participants", auth.AuthMiddleware(s.jwtManager), s.videoHandler.GetRoomParticipants)
	s.app.Get("/api/video/rooms/participants", auth.AuthMiddleware(s.jwtManager), s.videoHandler.GetAllRoomsParticipants)

	// Room Transcripts API (ì‹¤ì‹œê°„ ìŒì„± ê¸°ë¡ ë™ê¸°í™”)
	s.app.Get("/api/room/:roomId/transcripts", s.handleGetRoomTranscripts)

	// Whiteboard ë¼ìš°íŠ¸
	// Whiteboard ë¼ìš°íŠ¸
	s.app.Get("/api/whiteboard", auth.AuthMiddleware(s.jwtManager), s.whiteboardHandler.GetWhiteboard)
	s.app.Post("/api/whiteboard", auth.AuthMiddleware(s.jwtManager), s.whiteboardHandler.HandleWhiteboard)

	// WebSocket ì—…ê·¸ë ˆì´ë“œ ì²´í¬ ë¯¸ë“¤ì›¨ì–´
	s.app.Use("/ws", func(c *fiber.Ctx) error {
		if websocket.IsWebSocketUpgrade(c) {
			c.Locals("allowed", true)
			return c.Next()
		}
		return fiber.ErrUpgradeRequired
	})

	// WebSocket ì˜¤ë””ì˜¤ ìŠ¤íŠ¸ë¦¬ë° ì—”ë“œí¬ì¸íŠ¸
	s.app.Get("/ws/audio", func(c *fiber.Ctx) error {
		if !websocket.IsWebSocketUpgrade(c) {
			return fiber.ErrUpgradeRequired
		}

		// ì†ŒìŠ¤ ì–¸ì–´ íŒŒë¼ë¯¸í„° ì¶”ì¶œ (ë°œí™”ìê°€ ë§í•˜ëŠ” ì–¸ì–´, ê¸°ë³¸ê°’: ko)
		sourceLang := c.Query("sourceLang", "ko")
		switch sourceLang {
		case "ko", "en", "ja", "zh":
			// ìœ íš¨í•œ ì–¸ì–´
		default:
			sourceLang = "ko"
		}
		c.Locals("sourceLang", sourceLang)

		// íƒ€ê²Ÿ ì–¸ì–´ íŒŒë¼ë¯¸í„° ì¶”ì¶œ (ë“£ê³  ì‹¶ì€ ì–¸ì–´, ê¸°ë³¸ê°’: en)
		targetLang := c.Query("targetLang", "en")
		switch targetLang {
		case "ko", "en", "ja", "zh":
			// ìœ íš¨í•œ ì–¸ì–´
		default:
			targetLang = "en"
		}
		c.Locals("targetLang", targetLang)

		// ê¸°ì¡´ lang íŒŒë¼ë¯¸í„°ë„ ì§€ì› (í•˜ìœ„ í˜¸í™˜ì„±)
		if c.Query("lang") != "" && c.Query("sourceLang") == "" {
			legacyLang := c.Query("lang", "en")
			c.Locals("targetLang", legacyLang)
		}

		// ë°œí™”ì ì‹ë³„ ID ì¶”ì¶œ (ì›ê²© ì°¸ê°€ìì˜ identity)
		participantId := c.Query("participantId", "")
		c.Locals("participantId", participantId)

		// Room ID ì¶”ì¶œ (ê°™ì€ ë°©ì˜ ë™ì¼ ì–¸ì–´ ê·¸ë£¹ì„ ë¬¶ê¸° ìœ„í•´)
		roomId := c.Query("roomId", "")
		c.Locals("roomId", roomId)

		// Listener ID ì¶”ì¶œ (ë“£ëŠ” ì‚¬ëŒì˜ identity)
		listenerId := c.Query("listenerId", "")
		c.Locals("listenerId", listenerId)

		return c.Next()
	}, websocket.New(s.handler.HandleWebSocket, websocket.Config{
		ReadBufferSize:  s.cfg.WebSocket.ReadBufferSize,
		WriteBufferSize: s.cfg.WebSocket.WriteBufferSize,
	}))

	// WebSocket Room ê¸°ë°˜ ì˜¤ë””ì˜¤ ìŠ¤íŠ¸ë¦¬ë° ì—”ë“œí¬ì¸íŠ¸ (ìƒˆë¡œìš´ ì•„í‚¤í…ì²˜)
	// Roomë‹¹ 1 gRPC ìŠ¤íŠ¸ë¦¼ ê³µìœ ë¡œ ì—°ê²° íš¨ìœ¨í™” (NÂ² â†’ N)
	s.app.Get("/ws/room", func(c *fiber.Ctx) error {
		if !websocket.IsWebSocketUpgrade(c) {
			return fiber.ErrUpgradeRequired
		}

		// Room ID (í•„ìˆ˜)
		roomId := c.Query("roomId", "")
		if roomId == "" {
			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
				"error": "roomId is required",
			})
		}
		c.Locals("roomId", roomId)

		// Listener ID (í•„ìˆ˜) - ë“£ëŠ” ì‚¬ëŒì˜ identity
		listenerId := c.Query("listenerId", "")
		if listenerId == "" {
			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
				"error": "listenerId is required",
			})
		}
		c.Locals("listenerId", listenerId)

		// Target Language (ì„ íƒ, ê¸°ë³¸ê°’: en)
		targetLang := c.Query("targetLang", "en")
		switch targetLang {
		case "ko", "en", "ja", "zh":
			// ìœ íš¨í•œ ì–¸ì–´
		default:
			targetLang = "en"
		}
		c.Locals("targetLang", targetLang)

		return c.Next()
	}, websocket.New(s.handler.HandleRoomWebSocket, websocket.Config{
		ReadBufferSize:  s.cfg.WebSocket.ReadBufferSize,
		WriteBufferSize: s.cfg.WebSocket.WriteBufferSize,
	}))

	// WebSocket ì•Œë¦¼ ì—”ë“œí¬ì¸íŠ¸
	s.app.Get("/ws/notifications", func(c *fiber.Ctx) error {
		if !websocket.IsWebSocketUpgrade(c) {
			return fiber.ErrUpgradeRequired
		}

		// ì¿ í‚¤ì—ì„œ JWT í† í° ì¶”ì¶œ
		accessToken := c.Cookies("access_token")
		if accessToken == "" {
			// WebSocketì€ JSON ì‘ë‹µ ëŒ€ì‹  ì—°ê²° ê±°ë¶€
			return c.SendStatus(fiber.StatusUnauthorized)
		}

		// JWT ê²€ì¦
		claims, err := s.jwtManager.ValidateAccessToken(accessToken)
		if err != nil {
			return c.SendStatus(fiber.StatusUnauthorized)
		}

		c.Locals("userId", claims.UserID)

		return c.Next()
	}, websocket.New(s.notificationWSHandler.HandleWebSocket, websocket.Config{
		ReadBufferSize:  4096,
		WriteBufferSize: 4096,
	}))

	// WebSocket ì±„íŒ… ì—”ë“œí¬ì¸íŠ¸ (roomId ê¸°ë°˜)
	s.app.Get("/ws/chat/:workspaceId/:roomId", func(c *fiber.Ctx) error {
		if !websocket.IsWebSocketUpgrade(c) {
			return fiber.ErrUpgradeRequired
		}

		// ì¿ í‚¤ì—ì„œ JWT í† í° ì¶”ì¶œ
		accessToken := c.Cookies("access_token")
		if accessToken == "" {
			return c.SendStatus(fiber.StatusUnauthorized)
		}

		// JWT ê²€ì¦
		claims, err := s.jwtManager.ValidateAccessToken(accessToken)
		if err != nil {
			return c.SendStatus(fiber.StatusUnauthorized)
		}

		workspaceID, err := c.ParamsInt("workspaceId")
		if err != nil {
			return c.SendStatus(fiber.StatusBadRequest)
		}

		roomID, err := c.ParamsInt("roomId")
		if err != nil {
			return c.SendStatus(fiber.StatusBadRequest)
		}

		// ë©¤ë²„ í™•ì¸ (ACTIVE ìƒíƒœë§Œ)
		var count int64
		s.db.Table("workspace_members").
			Where("workspace_id = ? AND user_id = ? AND status = ?", workspaceID, claims.UserID, "ACTIVE").
			Count(&count)
		if count == 0 {
			return c.SendStatus(fiber.StatusForbidden)
		}

		// ì±„íŒ…ë°©ì´ í•´ë‹¹ ì›Œí¬ìŠ¤í˜ì´ìŠ¤ì— ì†í•˜ëŠ”ì§€ í™•ì¸
		var roomCount int64
		s.db.Table("meetings").
			Where("id = ? AND workspace_id = ? AND type IN ?", roomID, workspaceID, []string{model.MeetingTypeChatRoom.String(), model.MeetingTypeDM.String()}).
			Count(&roomCount)
		if roomCount == 0 {
			return c.SendStatus(fiber.StatusNotFound)
		}

		// ìœ ì € ì •ë³´ ì¡°íšŒ
		var user struct {
			Nickname string
		}
		s.db.Table("users").Select("nickname").Where("id = ?", claims.UserID).Scan(&user)

		c.Locals("roomId", int64(roomID))
		c.Locals("workspaceId", int64(workspaceID))
		c.Locals("userId", claims.UserID)
		c.Locals("nickname", user.Nickname)

		return c.Next()
	}, websocket.New(s.chatWSHandler.HandleWebSocket, websocket.Config{
		ReadBufferSize:  4096,
		WriteBufferSize: 4096,
	}))

	// WebSocket ìŒì„± ì°¸ê°€ì ì—”ë“œí¬ì¸íŠ¸
	s.app.Get("/ws/voice-participants/:workspaceId", func(c *fiber.Ctx) error {
		if !websocket.IsWebSocketUpgrade(c) {
			return fiber.ErrUpgradeRequired
		}

		// ì¿ í‚¤ì—ì„œ JWT í† í° ì¶”ì¶œ
		accessToken := c.Cookies("access_token")
		if accessToken == "" {
			return c.SendStatus(fiber.StatusUnauthorized)
		}

		// JWT ê²€ì¦
		claims, err := s.jwtManager.ValidateAccessToken(accessToken)
		if err != nil {
			return c.SendStatus(fiber.StatusUnauthorized)
		}

		workspaceID, err := c.ParamsInt("workspaceId")
		if err != nil {
			return c.SendStatus(fiber.StatusBadRequest)
		}

		// ë©¤ë²„ í™•ì¸ (ACTIVE ìƒíƒœë§Œ)
		var count int64
		s.db.Table("workspace_members").
			Where("workspace_id = ? AND user_id = ? AND status = ?", workspaceID, claims.UserID, "ACTIVE").
			Count(&count)
		if count == 0 {
			return c.SendStatus(fiber.StatusForbidden)
		}

		c.Locals("workspaceId", int64(workspaceID))
		c.Locals("userId", claims.UserID)

		return c.Next()
	}, websocket.New(s.voiceParticipantsWSHandler.HandleWebSocket, websocket.Config{
		ReadBufferSize:  4096,
		WriteBufferSize: 4096,
	}))
}

// Start ì„œë²„ ì‹œì‘ (Graceful Shutdown ì§€ì›)
func (s *Server) Start() error {
	// Graceful Shutdown ì„¤ì •
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)

	go func() {
		<-quit
		log.Println("ğŸ›‘ Shutting down server...")
		if err := s.app.ShutdownWithTimeout(30 * time.Second); err != nil {
			log.Fatalf("Server shutdown error: %v", err)
		}
	}()

	log.Printf("ğŸš€ Realtime Voice AI Gateway starting on %s", s.cfg.Server.Port)
	log.Printf("ğŸ“¡ WebSocket endpoint: ws://localhost%s/ws/audio", s.cfg.Server.Port)

	return s.app.Listen(s.cfg.Server.Port)
}

// Shutdown ì„œë²„ ì¢…ë£Œ
func (s *Server) Shutdown() error {
	return s.app.ShutdownWithTimeout(30 * time.Second)
}

// handleGetRoomTranscripts retrieves transcripts from Redis for a room
func (s *Server) handleGetRoomTranscripts(c *fiber.Ctx) error {
	roomID := c.Params("roomId")
	if roomID == "" {
		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
			"error": "roomId is required",
		})
	}

	roomHub := s.handler.GetRoomHub()
	if roomHub == nil {
		return c.Status(fiber.StatusServiceUnavailable).JSON(fiber.Map{
			"error": "room hub not available",
		})
	}

	transcripts, err := roomHub.GetTranscripts(roomID)
	if err != nil {
		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
			"error": "failed to get transcripts",
		})
	}

	// Convert to response format
	responses := make([]handler.RoomTranscriptResponse, len(transcripts))
	for i, t := range transcripts {
		responses[i] = handler.RoomTranscriptResponse{
			RoomID:      t.RoomID,
			SpeakerID:   t.SpeakerID,
			SpeakerName: t.SpeakerName,
			Original:    t.Original,
			Translated:  t.Translated,
			SourceLang:  t.SourceLang,
			TargetLang:  t.TargetLang,
			IsFinal:     t.IsFinal,
			Timestamp:   t.Timestamp,
		}
	}

	return c.JSON(fiber.Map{
		"roomId":      roomID,
		"transcripts": responses,
		"count":       len(responses),
	})
}
